Init the repo for migration agent

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,58 +33,58 @@ option(PORTABLE "build a portable binary (disable arch-specific optimizations)" 
 
 if (CMAKE_VERSION VERSION_GREATER_EQUAL "3.24.0")
     cmake_policy(SET CMP0135 NEW)
-endif()
+endif ()
 
-if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-    if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 7)
+if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+    if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 7)
         message(FATAL_ERROR "It is expected to build kvrocks with GCC 7 or above")
-    endif()
-elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
-    if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 5)
+    endif ()
+elseif (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+    if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 5)
         message(FATAL_ERROR "It is expected to build kvrocks with Clang 5 or above")
-    endif()
-elseif(CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang")
-    if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 10)
+    endif ()
+elseif (CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang")
+    if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 10)
         message(FATAL_ERROR "It is expected to build kvrocks with Xcode toolchains 10 or above")
-    endif()
-else()
+    endif ()
+else ()
     message(WARNING "The compiler you are currently using is not officially supported,
         so you can try switching to GCC>=7 or Clang>=5 if you encounter problems")
-endif()
+endif ()
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(DEPS_FETCH_PROXY "" CACHE STRING
-    "a template URL to proxy the traffic for fetching dependencies, e.g. with DEPS_FETCH_PROXY = https://some-proxy/,
+        "a template URL to proxy the traffic for fetching dependencies, e.g. with DEPS_FETCH_PROXY = https://some-proxy/,
      https://example/some-dep.zip -> https://some-proxy/https://example/some-dep.zip")
 
-if(ENABLE_ASAN AND ENABLE_TSAN)
+if (ENABLE_ASAN AND ENABLE_TSAN)
     message(FATAL_ERROR "ASan and TSan cannot be used at the same time")
-endif()
+endif ()
 
-if((ENABLE_ASAN OR ENABLE_TSAN) AND (NOT DISABLE_JEMALLOC))
+if ((ENABLE_ASAN OR ENABLE_TSAN) AND (NOT DISABLE_JEMALLOC))
     message(FATAL_ERROR "ASan/TSan does not work well with JeMalloc")
-endif()
+endif ()
 
-if(ENABLE_ASAN)
-    if(ASAN_WITH_LSAN)
-        if((CMAKE_CXX_COMPILER_ID STREQUAL "GNU") AND (CMAKE_CXX_COMPILER_VERSION VERSION_LESS "5"))
+if (ENABLE_ASAN)
+    if (ASAN_WITH_LSAN)
+        if ((CMAKE_CXX_COMPILER_ID STREQUAL "GNU") AND (CMAKE_CXX_COMPILER_VERSION VERSION_LESS "5"))
             message(FATAL_ERROR "leak sanitizer is not supported until gcc 5")
-        endif()
+        endif ()
         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=leak")
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=leak")
         set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=leak")
-    endif()
+    endif ()
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=address")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address")
     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=address")
-endif()
-if(ENABLE_TSAN)
+endif ()
+if (ENABLE_TSAN)
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=thread")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=thread")
     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=thread")
-endif()
+endif ()
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
@@ -92,23 +92,23 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 find_library(REALTIME_LIB rt)
 if (REALTIME_LIB)
     list(APPEND EXTERNAL_LIBS PRIVATE rt)
-endif()
+endif ()
 
 if (CMAKE_HOST_APPLE)
     set(DISABLE_JEMALLOC ON)
     set(ENABLE_IPO OFF)
 endif ()
 
-if(NOT DISABLE_JEMALLOC)
+if (NOT DISABLE_JEMALLOC)
     include(cmake/jemalloc.cmake)
     list(APPEND EXTERNAL_LIBS PRIVATE jemalloc)
-endif()
+endif ()
 
 set(BUILD_SHARED_LIBS OFF CACHE BOOL "do not build shared libs by default")
 
-if(ENABLE_OPENSSL)
+if (ENABLE_OPENSSL)
     find_package(OpenSSL REQUIRED)
-endif()
+endif ()
 
 include(cmake/gtest.cmake)
 include(cmake/glog.cmake)
@@ -122,10 +122,10 @@ include(cmake/libevent.cmake)
 include(cmake/fmt.cmake)
 
 if (USE_LUAJIT)
-include(cmake/luajit.cmake)
-else()
-include(cmake/lua.cmake)
-endif()
+    include(cmake/luajit.cmake)
+else ()
+    include(cmake/lua.cmake)
+endif ()
 
 find_package(Threads REQUIRED)
 
@@ -138,46 +138,46 @@ list(APPEND EXTERNAL_LIBS zstd)
 list(APPEND EXTERNAL_LIBS zlib_with_headers)
 list(APPEND EXTERNAL_LIBS fmt)
 if (USE_LUAJIT)
-list(APPEND EXTERNAL_LIBS luajit)
-else()
-list(APPEND EXTERNAL_LIBS lua)
-endif()
+    list(APPEND EXTERNAL_LIBS luajit)
+else ()
+    list(APPEND EXTERNAL_LIBS lua)
+endif ()
 if (ENABLE_OPENSSL)
-list(APPEND EXTERNAL_LIBS OpenSSL::SSL)
-endif()
+    list(APPEND EXTERNAL_LIBS OpenSSL::SSL)
+endif ()
 list(APPEND EXTERNAL_LIBS tbb)
 list(APPEND EXTERNAL_LIBS Threads::Threads)
 
 # Add git sha to version.h
 find_package(Git REQUIRED)
 execute_process(COMMAND sh -c "cat src/VERSION.txt"
-    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} OUTPUT_VARIABLE PROJECT_VERSION)
+        WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} OUTPUT_VARIABLE PROJECT_VERSION)
 execute_process(COMMAND git rev-parse --short HEAD
-    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} OUTPUT_VARIABLE GIT_SHA)
+        WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} OUTPUT_VARIABLE GIT_SHA)
 string(STRIP "${GIT_SHA}" GIT_SHA)
 if ((PROJECT_VERSION STREQUAL "unstable") AND (GIT_SHA STREQUAL ""))
-	message(WARNING "It is highly recommended to build the unstable branch in a Git repo")
+    message(WARNING "It is highly recommended to build the unstable branch in a Git repo")
 endif ()
 configure_file(src/version.h.in ${PROJECT_BINARY_DIR}/version.h)
 
 if ((CMAKE_CXX_COMPILER_ID STREQUAL "GNU") OR (CMAKE_CXX_COMPILER_ID STREQUAL "Clang"))
     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static-libgcc")
 
-    if(ENABLE_STATIC_LIBSTDCXX)
+    if (ENABLE_STATIC_LIBSTDCXX)
         try_compile(FOUND_STATIC_LIBSTDCXX ${PROJECT_BINARY_DIR} ${PROJECT_SOURCE_DIR}/cmake/checks/static_libstdcxx.cc
-            LINK_OPTIONS -static-libstdc++ CXX_STANDARD 11)
+                LINK_OPTIONS -static-libstdc++ CXX_STANDARD 11)
 
-        if(NOT FOUND_STATIC_LIBSTDCXX)
+        if (NOT FOUND_STATIC_LIBSTDCXX)
             message(FATAL_ERROR "cannot find static library of libstdc++, please add ENABLE_STATIC_LIBSTDCXX=OFF to disable")
-        endif()
+        endif ()
 
         set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static-libstdc++")
-    endif()
-endif()
+    endif ()
+endif ()
 
 # kvrocks objects target
 file(GLOB_RECURSE KVROCKS_SRCS src/*.cc)
-MESSAGE( STATUS "Files will be compile: ${KVROCKS_SRCS}.")
+MESSAGE(STATUS "Files will be compile: ${KVROCKS_SRCS}.")
 list(FILTER KVROCKS_SRCS EXCLUDE REGEX src/main.cc)
 
 add_library(kvrocks_objs OBJECT ${KVROCKS_SRCS})
@@ -185,30 +185,30 @@ add_library(kvrocks_objs OBJECT ${KVROCKS_SRCS})
 target_include_directories(kvrocks_objs PUBLIC src src/common ${PROJECT_BINARY_DIR})
 target_compile_features(kvrocks_objs PUBLIC cxx_std_17)
 target_compile_options(kvrocks_objs PUBLIC -Wall -Wpedantic -Wsign-compare -Wreturn-type -fno-omit-frame-pointer -Werror=unused-result)
-if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
     target_compile_options(kvrocks_objs PUBLIC -Wno-pedantic)
-elseif((CMAKE_CXX_COMPILER_ID STREQUAL "Clang") OR (CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang"))
+elseif ((CMAKE_CXX_COMPILER_ID STREQUAL "Clang") OR (CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang"))
     target_compile_options(kvrocks_objs PUBLIC -Wno-gnu-statement-expression)
-endif()
+endif ()
 target_link_libraries(kvrocks_objs PUBLIC -fno-omit-frame-pointer)
 target_link_libraries(kvrocks_objs PUBLIC ${EXTERNAL_LIBS})
-if(ENABLE_OPENSSL)
+if (ENABLE_OPENSSL)
     target_compile_definitions(kvrocks_objs PUBLIC ENABLE_OPENSSL)
-endif()
+endif ()
 
-if(ENABLE_IPO)
+if (ENABLE_IPO)
     include(CheckIPOSupported)
     check_ipo_supported(RESULT ipo_result OUTPUT ipo_output LANGUAGES CXX)
 
-    if(ipo_result)
+    if (ipo_result)
         set_property(TARGET kvrocks_objs PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
-        if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+        if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
             target_link_libraries(kvrocks_objs PUBLIC "-fuse-ld=lld")
-        endif()
-    else()
+        endif ()
+    else ()
         message(WARNING "IPO is not supported: ${ipo_output}")
-    endif()
-endif()
+    endif ()
+endif ()
 
 # kvrocks main target
 add_executable(kvrocks src/main.cc)
@@ -218,7 +218,12 @@ target_link_libraries(kvrocks PRIVATE kvrocks_objs ${EXTERNAL_LIBS})
 file(GLOB KVROCKS2REDIS_SRCS utils/kvrocks2redis/*.cc)
 add_executable(kvrocks2redis ${KVROCKS2REDIS_SRCS})
 
+# kvrocks2redis sync tool
+file(GLOB MIGRATIONAGENT_SRCS utils/migration_agent/*.cc)
+add_executable(migration_agent ${MIGRATIONAGENT_SRCS})
+
 target_link_libraries(kvrocks2redis PRIVATE kvrocks_objs ${EXTERNAL_LIBS})
+target_link_libraries(migration_agent PRIVATE kvrocks_objs ${EXTERNAL_LIBS})
 
 # kvrocks unit tests
 file(GLOB_RECURSE TESTS_SRCS tests/cppunit/*.cc)
